Logo: replaced with white text, and bg set to black
CSS vars: split vars for loc and loc card
into width and heigh for each

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <!-- <div class="nav-item nav-brand">TEDxYCCE'22</div> -->
-        <div class="nav-brand"><img class="nav-logo" src="./img/logo_min.png" alt="TEDxYCCE Logo" ></div>
+        <div class="nav-brand"><img class="nav-logo" src="./img/logo_white_min.png" alt="TEDxYCCE Logo" ></div>
       </nav>
     <main>
         
