added theme image for teaser

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         
         <div class="coming-soon">Coming Soon</div>
-        
+        <div class="theme-image"><img width="40%" src="./img/home/them_pic_crop.png" alt="Theme Image for the Event"></div>
         <div class="location">
           <div class="loc-card"></div>
           <iframe  class="loc" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3722.435644645357!2d78.97638361476447!3d21.09519108596243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4952117eaac51%3A0x6d8277793eb63d6a!2sYeshwantrao%20Chavan%20College%20of%20Engineering%20(YCCE)%2C%20Nagpur!5e0!3m2!1sen!2sin!4v1643402177758!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
