--- a/index.html
+++ b/index.html
@@ -1,26 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEDxYCCE 2022</title>
 
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="./styles/main.css" />
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/index.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <!-- <div class="nav-item nav-brand">TEDxYCCE'22</div> -->
-        <div class="nav-brand"><img class="nav-logo" src="./img/logo_white_min.png" alt="TEDxYCCE Logo" ></div>
-      </nav>
+      <!-- <div class="nav-item nav-brand">TEDxYCCE'22</div> -->
+      <div class="nav-brand">
+        <img
+          class="nav-logo"
+          src="./img/logo_white_min.png"
+          alt="TEDxYCCE Logo"
+        />
+      </div>
+    </nav>
     <main>
-        
-        <div class="coming-soon">Coming Soon</div>
-        <div class="theme-image"><img width="40%" src="./img/home/them_pic_crop.png" alt="Theme Image for the Event"></div>
-        <div class="location">
-          <div class="loc-card"></div>
-          <iframe  class="loc" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3722.435644645357!2d78.97638361476447!3d21.09519108596243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4952117eaac51%3A0x6d8277793eb63d6a!2sYeshwantrao%20Chavan%20College%20of%20Engineering%20(YCCE)%2C%20Nagpur!5e0!3m2!1sen!2sin!4v1643402177758!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <div class="coming-soon">Coming Soon</div>
+      <div class="theme-image">
+        <img
+          width="40%"
+          src="./img/home/them_pic_crop.png"
+          alt="Theme Image for the Event"
+        />
+      </div>
+      <div class="location">
+        <div class="loc-card"></div>
+        <iframe
+          class="loc"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3722.435644645357!2d78.97638361476447!3d21.09519108596243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4952117eaac51%3A0x6d8277793eb63d6a!2sYeshwantrao%20Chavan%20College%20of%20Engineering%20(YCCE)%2C%20Nagpur!5e0!3m2!1sen!2sin!4v1643402177758!5m2!1sen!2sin"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footers">
+        <div class="footer-p1">
+          <p>Copyright © 2022 TEDxYCCE</p>
+
+          <ul class="social-icon">
+            <li>
+              <a
+                href="https://www.facebook.com/tedxycceofficial"
+                class="fab fa-facebook"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/tedxycce/"
+                class="fab fa-instagram"
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/tedxycce" class="fab fa-twitter"></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/company/tedxycce/"
+                class="fab fa-linkedin"
+              ></a>
+            </li>
+          </ul>
         </div>
-      </main>
-</body>
+        <p>
+
+          This independent TEDx event is operated under license from TED.</>
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
