--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
     <title>TEDxYCCE 2022</title>
+    <link rel="shortcut icon" href="./img/ted_icon.ico" />
+    <meta
+      name="description"
+      content="TEDxYCCE, x = independently organised TED event. Under The Stairs, This May, at YCCE, Nagpur."
+    />
+    <meta
+      name="keywords"
+      content="TEDx, YCCE, Yeshwantrao Chavan College of Engineering, Hingna, Nagpur, event, talks"
+    />
+
+    <!-- Social media tags -->
+    <!-- Open Graph -->
+    <meta property="og:title" content="TEDxYCCE - Under The Stairs" />
+    <!-- <meta
+    property="og:description"
+    content="Event Theme - Under The Stairs. This May, at Yeshwantrao Chavan College of Engineering."
+    /> -->
+    <!-- <meta property="og:image" content="http://www.tedxycce.in/res/images/logos/TXY_preview_WA.png?version=1.3" /> -->
+    <!-- <meta property="og:image:secure_url" content="https://www.tedxycce.in/res/images/logos/TXY_preview_WA.png?version=1.3" /> -->
+    <!-- <meta property="og:image:width" content="600" /> -->
+    <!-- <meta property="og:image:height" content="314" /> -->
+    <!-- <meta property="og:image:height" content="314" /> -->
+    <meta property="og:url" content="https://www.tedxycce.in" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@tedxycce" />
+    <meta name="twitter:creator" content="@anmoldeep1509" />
+    <!-- <meta
+    itemprop="description"
+    content="Under The Stairs. This May, at Yeshwantrao Chavan College of Engineering."
+    /> -->
+    <!-- <meta itemprop="image" content="https://www.tedxycce.in/res/images/logos/TXY_preview_WA.png?version=1.3" /> -->
+    <meta name="author" content="Anmoldeep Singh Arora" />
 
     <link
       rel="stylesheet"
@@ -48,8 +91,37 @@
       </div>
     </main>
 
+    <section name="Our past Events" class="section past-event-section">
+      <div class="container">
+        <div class="section-title">
+          <div class="title-text">Our Past Events</div>
+        </div>
+        <div class="event-card">
+          <a href="https://tedxycce.github.io/tedxycce_21/" target="_blank">
+            <img
+              class="event-peek"
+              src="./img/logo_min.png"
+              alt="TEDxYCCE 2021 Highlight"
+            />
+            <div class="event-name">TEDxYCCE 2021 <i class="far fa-angle-double-right"></i></div>
+          </a>
+          <div class="event-theme">
+            <strong>
+              May 8th, 2021 <br/> <br/>
+            </strong> 
+            To unwrap the invisible foundation of the stairs and
+            explore its incredible power, TEDxYCCE 2021 came up with the broad
+            theme "Under the Stairs" which is an idea to uncover the hidden
+            treasure below the Stairs.
+          </div>
+
+<!-- TODO: need to add playlist link and icons and website link -->
+          <!-- Watch | Learn More. -->
+        </div>
+      </div>
+    </section>
     <footer>
-      <div class="footers">
+      <div class="container footers">
         <div class="footer-p1">
           <p>Copyright © 2022 TEDxYCCE</p>
 
@@ -77,10 +149,7 @@
             </li>
           </ul>
         </div>
-        <p>
-
-          This independent TEDx event is operated under license from TED.</>
-        </p>
+        <p>This independent TEDx event is operated under license from TED.</p>
       </div>
     </footer>
   </body>
